# ucx

./: .gitignore  Makefile.am  configure.ac
src/adapters/: Makefile.am
src/adapters/mpi/: ucp_coll.h
src/tools/info/: ucx_info.c
src/tools/perf/: libperf.c  libperf.h  libperf_int.h  perftest.c  ucp_tests.cc
src/ucg/: Makefile.am  configure.m4
src/ucg/api/: ucg.h  ucg_def.h  ucg_plan_component.h  ucg_version.h.in
src/ucg/base/: Makefile.am  configure.m4  ucg_group.c  ucg_group.h  ucg_plan.c  ucg_plan.h
src/ucg/builtin/: Makefile.am  builtin.c  builtin.h  builtin_neighbor.c  builtin_ops.c  builtin_ops.h  builtin_recursive.c  builtin_tree.c  configure.m4
src/ucg/core/: group.c  group.h  ops.c  ops.h  types.h  version.c.in
src/ucg/hicoll/: Makefile.am  configure.m4  hicoll.c  hicoll.h
src/ucg/topology/: neighbor.c  recursive.c  topo.c  topo.h  tree.c
src/ucp/: Makefile.am
src/ucp/api/: ucp.h  ucp_def.h  ucpx.h
src/ucp/coll/: coll_group.c  coll_group.h  coll_ops.c  coll_ops.h  coll_topo.c  coll_topo.h  coll_topo_neighbor.c  coll_topo_recursive.c  coll_topo_tree.c  comp.c  group.c  group.h  ops.c  ops.h  req.c  req.h  step.c  step.h  topo.c  topo.h
src/ucp/core/: ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.h  ucp_lane.c  ucp_lane.h  ucp_mm.c  ucp_request.c  ucp_request.h  ucp_request.inl  ucp_types.h  ucp_worker.c  ucp_worker.h
src/ucp/dt/: dt.c  dt.h  dt.inl  dt_contig.h  dt_generic.h
src/ucp/proto/: proto.h  proto_am.inl  proto_dt.c
src/ucp/tag/: offload.c  tag_recv.c  tag_send.c
src/ucp/wireup/: besmigration.c  migration.c  migration.h  select.c  wireup.c  wireup.h
src/ucs/: Makefile.am
src/ucs/config/: global_opts.c
src/ucs/debug/: memtrack.h  tune.c
src/ucs/sys/: rcache.c  rcache.h
src/uct/api/: uct.h
src/uct/ib/base/: ib_md.c  ib_md.h  ib_umr.c  ib_verbs.h
src/uct/ib/dc/verbs/: dc_verbs.c
src/uct/ib/rc/verbs/: rc_verbs_ep.c  rc_verbs_iface.c
test/examples/: Makefile.am  ucp_collective.c  ucp_hello_world.c
test/gtest/common/: test_helpers.h
test/gtest/ucp/: test_ucp_perf.cc
test/gtest/ucs/: test_rcache.cc
test/gtest/uct/: uct_test.cc
