#
# Copyright (c) Huawei Technologies Ltd. 2018.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES      = libucg_base.la
libucg_base_la_CFLAGS   = $(BASE_CFLAGS)
libucg_base_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	ucg_types.h \
	ucg_group.h \
	ucg_plan.h

libucg_base_la_SOURCES = \
	ucg_plan.c \
	ucg_group.c \
	ucg_version.c
