#
# Copyright (c) Huawei Technologies Ltd. 2018.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES         = libucg_builtin.la
libucg_builtin_la_CFLAGS   = $(BASE_CFLAGS)
libucg_builtin_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = \
	builtin.h \
	builtin_ops.h

libucg_builtin_la_SOURCES = \
	builtin.c \
	builtin_ops.c \
	builtin_tree.c \
	builtin_neighbor.c \
	builtin_recursive.c
