#
# Copyright (c) Huawei Technologies Ltd. 2018.  ALL RIGHTS RESERVED.
# See file LICENSE for terms.
#

noinst_LTLIBRARIES        = libucg_hicoll.la
libucg_hicoll_la_CFLAGS   = $(BASE_CFLAGS)
libucg_hicoll_la_CPPFLAGS = $(BASE_CPPFLAGS)

noinst_HEADERS = hicoll.h

libucg_hicoll_la_SOURCES = hicoll.c
